--- a/package.json
+++ b/package.json
@@ -4,46 +4,34 @@
   "description": "",
   "main": "build.js",
   "dependencies": {
-    "@swc/cli": "0.1.54",
-    "@swc/core": "1.2.120",
-    "@types/chokidar": "^2.1.7",
-    "@types/clipboardy": "^2.0.4",
-    "@types/deasync": "^0.1.1",
-    "@types/js-yaml": "^3.12.10",
+    "@swc/cli": "0.7.3",
+    "@swc/core": "1.11.21",
+    "@types/deasync": "^0.1.5",
+    "@types/js-yaml": "4.0.9",
     "@types/md5": "^2.3.5",
-    "@types/mocha": "^8.2.3",
-    "@types/mysql": "^2.15.26",
-    "@types/node": "^14.18.63",
-    "@types/node-sql-parser": "^1.1.0",
+    "@types/mocha": "^10.0.10",
+    "@types/mysql": "^2.15.27",
+    "@types/node": "^22.14.1",
     "@types/pngjs": "^6.0.5",
     "@types/request": "^2.48.12",
-    "@types/terminal-kit": "^1.34.1",
+    "@types/terminal-kit": "^2.5.7",
     "@types/xml2js": "^0.4.14",
-    "adm-zip": "^0.4.16",
-    "bigint-conversion": "^2.4.3",
-    "chokidar": "^3.6.0",
-    "clipboardy": "^2.3.0",
+    "chokidar": "^4.0.3",
+    "clipboardy": "^4.0.0",
     "cross-spawn": "^7.0.6",
     "deasync": "^0.1.30",
     "extract-zip": "^2.0.1",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^11.3.0",
     "install": "^0.13.0",
-    "js-yaml": "^3.14.1",
     "md5": "^2.3.0",
-    "md5-file": "^5.0.0",
     "mocha": "^11.1.0",
-    "mysql2": "^3.12.0",
-    "ncp": "^2.0.0",
-    "node-sql-parser": "^3.9.4",
+    "mysql2": "^3.14.0",
     "nodejs-file-downloader": "^4.13.0",
     "path": "^0.12.7",
-    "pngjs": "^6.0.0",
-    "pureimage": "^0.3.17",
-    "request": "^2.88.2",
-    "request-progress": "^3.0.0",
+    "pngjs": "^7.0.0",
+    "pureimage": "^0.4.18",
     "source-map": "^0.7.4",
     "source-map-support": "^0.5.21",
-    "sync-mysql": "^3.0.1",
     "terminal-kit": "^3.1.2",
     "typescript": "4.7.3",
     "typescript-to-lua": "1.6.2",
